app/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello/
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
  tls:
    - hosts:
        - localhost
      secretName: self-signed-tls-secret
